# PurePoint

./: .editorconfig  .gitignore  .swift-format  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  justfile  vision.md
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: macos.yml  release.yml  rust.yml  security.yml
apps/purepoint-macos/: ExportOptions.plist  Info.plist
apps/purepoint-macos/purepoint-macos/: ContentView.swift  purepoint_macosApp.swift
apps/purepoint-macos/purepoint-macos.xcodeproj/: project.pbxproj
apps/purepoint-macos/purepoint-macosTests/: AgentsHubModelsTests.swift  AgentsHubStateTests.swift  ChatStateTests.swift  ClaudeConversationIndexTests.swift  ClaudeProcessTests.swift  ContentBlockSplitterTests.swift  DaemonClientParseTests.swift  DaemonWorkspaceServiceTests.swift  HexEncodingTests.swift  StreamEventTests.swift  TranscriptParserTests.swift  purepoint_macosTests.swift
apps/purepoint-macos/purepoint-macosUITests/: purepoint_macosUITests.swift  purepoint_macosUITestsLaunchTests.swift
crates/pu-cli/: Cargo.toml
crates/pu-cli/assets/: SKILL.md
crates/pu-cli/src/: client.rs  daemon_ctrl.rs  error.rs  main.rs  output.rs  skill.rs
crates/pu-cli/src/commands/: agent_def.rs  attach.rs  clean.rs  diff.rs  grid.rs  health.rs  init.rs  kill.rs  logs.rs  mod.rs  prompt.rs  schedule.rs  send.rs  spawn.rs  status.rs  swarm.rs
crates/pu-core/: Cargo.toml
crates/pu-core/src/: agent_def.rs  config.rs  error.rs  id.rs  lib.rs  manifest.rs  paths.rs  protocol.rs  schedule_def.rs  serde_defaults.rs  swarm_def.rs  template.rs  types.rs  validation.rs
crates/pu-engine/: Cargo.toml
crates/pu-engine/src/: agent_monitor.rs  attach_handler.rs  daemon_lifecycle.rs  engine.rs  git.rs  ipc_server.rs  lib.rs  main.rs  output_buffer.rs  pty_manager.rs  test_helpers.rs
crates/pu-engine/tests/: integration.rs
docs/: spec-system.md
docs/architecture/: README.md  agent-execution.md  daemon-engine.md  desktop-app-integration.md  distribution.md  ipc-api.md  module-structure.md  storage.md
docs/design/: README.md  philosophy.md  rubric.md  rules.md
docs/feature-gaps/: agent-rename-management.md  claude-md-editor.md  dashboard-view.md  keyboard-shortcuts.md  manual-refresh.md  multi-project.md  project-picker-onboarding.md  prompt-library.md  schedules-automation.md  settings-preferences.md  skills-manager.md  swarms-orchestration.md  theme-system.md
docs/process/: README.md
docs/process/code-review/: README.md  philosophy.md  rubric.md  rules.md
docs/process/greenfield/: README.md  philosophy.md  rules.md
docs/process/product-discovery/: README.md  philosophy.md  rules.md
docs/process/requirements/: README.md  philosophy.md  rules.md
docs/product/: README.md  agent-lifecycle.md  cli.md  configuration.md  cross-reference-matrix.csv  cross-reference-matrix.md  daemon.md  data-model.md  desktop-app.md  memory-system.md  orchestration.md  output-streaming.md  recovery-resilience.md  scheduling.md  worktree-management.md
docs/reference/: README.md  cli-commands-map.csv  swift-app-inventory.md  typescript-cli-inventory.md
(+121 files in other folders)
