[workspace]
resolver = "2"
members = [
    "crates/pu-core",
    "crates/pu-engine",
    "crates/pu-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal", "process", "fs"] }
uuid = { version = "1", features = ["v4"] }
indexmap = { version = "2", features = ["serde"] }
