[package]
name = "pu-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
thiserror = { workspace = true }
chrono = { workspace = true }
nanoid = "0.4"
uuid = { workspace = true }
fs4 = "0.12"

[dev-dependencies]
tempfile = "3"
