[package]
name = "pu-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
thiserror = { workspace = true }
chrono = { workspace = true }
rand = "0.10"
uuid = { workspace = true }
indexmap = { workspace = true }
fs4 = "0.13"

[dev-dependencies]
tempfile = "3"
