[package]
name = "pu-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pu-core = { path = "../pu-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true }
nix = { version = "0.31", features = ["term", "signal", "process", "fs"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "pu-engine"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
